add another page for crispy rice

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <ul>
     <li><a href="recipes/sandwich.html">The Shawarma Sandwich</a></li>
     <li><a href="recipes/bulgogi.html">Easy and Nice Bulgogi</a></li>
-    <li><a href="recipes/sandwich.html">Okonomiyaki-Inspired Crispy Rice</a></li>
+    <li><a href="recipes/rice.html">Okonomiyaki-Inspired Crispy Rice</a></li>
     </ul>
 </body>
 </html>
